# auxilia

./: .codacy.yml  .env.example  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CLAUDE.md  Makefile  PRD-agent-runtime.md  README.md  SPEC-subagent-bindings.md  docker-compose.dev.yml  docker-compose.yml  metabase-mcp-app.md  release-please-config.json  runs-postgres-plan.md  teams-feature-plan.md  trigger-feature-plan.md
backend/: .dockerignore  CHANGELOG.md  CONVENTIONS.md  CONVENTIONS_RENAMES.md  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 000000000000_setup_langgraph_checkpoint_tables.py  03aa939db67e_create_mcp_servers_table.py  09bb4fe47733_create_mcp_server_api_keys_table.py  0ea6423f4df4_create_personal_access_tokens_table.py  150d3bd147c0_add_color_to_agents.py  3902b1f0b15e_create_invites_table.py  3c7f53d1813d_drop_runs_audit_table.py  41256d98e51d_create_agent_mcp_server_bindings_table.py  448c4c508f8d_runs_thread_fk_cascade.py  528738f226c2_create_users_table.py  595341e814b4_create_runs_audit_table.py  5e352222f637_replace_avatar_blob_with_emoji_in_.py  60eb74a86009_add_unique_constraint_to_mcp_server_urls.py  77853f24b2ed_add_models_table.py  9633fbc39c18_add_agent_user_permissions_table.py  a1b2c3d4e5f6_create_mcp_server_oauth_credentials_table.py  a1d7e9f2c3b4_add_tags.py  a1f2b3c4d5e6_replace_is_superuser_with_role.py  a1f4c7d2e9b3_index_runs_user_id.py  a1f4c7d2e9b3_index_runs_user_id_updated_at.py  a57400e4fb11_add_updated_at_to_personal_access_tokens.py  a7c3e9f2b1d4_create_agent_subagent_bindings_table.py  aafa539a4bba_add_is_archived_column_to_agent.py  b1c2d3e4f5a6_rename_users_hashed_password.py  b2c3d4e5f6a7_add_official_mcp_servers_batch.py  b4a7e2f1c9d3_add_is_archived_to_agents.py  b6d1c8e4f2a7_add_triggers.py  c2d3e4f5a6b7_rename_agents_sandbox_to_has_code_interpreter.py  c3d4e5f6g7h8_remove_enabled_tools_column.py  c8f4e2a91d05_add_default_model_flag.py  c9a4f1d83b27_add_source_to_threads.py  d1a9c24eee18_add_model_id_to_threads.py  d3e4f5a6b7c8_rename_subagent_coordinator_to_supervisor.py  d4e8f1a6c9b2_add_runs_table.py  d5e6f7a8b9c0_rename_binding_tables.py  e33c42c8ef4f_add_slack_official_mcp_server.py  e3b81561b671_create_agents_table.py  e44a6b57e444_add_sandbox_flag_to_agents.py  e4f5a6b7c8d9_rename_permission_user_to_member.py  e75ab54f0585_add_oauth_accounts_and_rename_user_.py  (+6 more)
backend/app/: database.py  exceptions.py  main.py  models.py  pagination.py  redis_client.py  repository.py  service.py  settings.py
backend/app/adapters/: message_adapter.py  stream_adapter.py
backend/app/adapters/stream/: sse.py  (+5 more)
backend/app/agents/: current_date.py  current_datetime.py  hitl.py  invalid_tool_calls.py  models.py  repository.py  router.py  runtime.py  schemas.py  service.py  settings.py  stream.py  structured_output.py  tool_errors.py  toolset.py  utils.py
backend/app/auth/: dependencies.py  router.py  schemas.py  service.py  settings.py  utils.py
backend/app/invites/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/mcp/: router.py  utils.py
backend/app/model_providers/: catalog.py  models.py  repository.py  router.py  schemas.py  service.py  settings.py  whitelist.py  whitelist.yaml
backend/app/models/: message.py  mixins.py
backend/app/sandbox/: backend.py  factory.py  lazy.py  provider.py  router.py  settings.py  tools.py
backend/app/tags/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/teams/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/threads/: models.py  repository.py  router.py  schemas.py  serialization.py  service.py
backend/app/triggers/: models.py  repository.py  router.py  scanner.py  schedule.py  schemas.py  service.py  settings.py
backend/app/users/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/utils/: timer.py
backend/scripts/: seed_dev.py
backend/tests/: conftest.py  test_database.py
backend/tests/adapters/: test_message_adapter.py  test_stream_adapter.py
backend/tests/agents/: test_agents_router.py  test_current_date.py  test_current_datetime.py  test_invalid_tool_calls.py  test_repository.py  test_runtime.py  test_runtime_mcp_app_metadata.py  test_service.py  test_stream.py  test_structured_output.py  test_tool_errors.py  test_toolset.py
backend/tests/invites/: test_service.py
backend/tests/mcp/: test_mcp_apps_router.py  test_mcp_servers_router.py
backend/tests/model_providers/: test_catalog.py  test_router.py  test_service.py  test_whitelist.py
backend/tests/sandbox/: test_lazy.py  test_settings.py  test_tools.py
backend/tests/tags/: test_router.py  test_service.py
backend/tests/teams/: test_router.py  test_service.py
backend/tests/threads/: test_serialization.py  test_service.py  test_threads_router.py
(+344 files in other folders)
