[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.15.0",
    "fastapi>=0.121.1",
    "greenlet>=3.1.1",
    "langchain-deepseek>=1.0.1",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.1",
    "langgraph-checkpoint-postgres>=3.0.1",
    "psycopg[binary]>=3.2.12",
    "redis>=5.2.0",
    "sqlmodel>=0.0.27",
    "python-jose[cryptography]>=3.3.0",
    "pydantic[email]>=2.12.4",
    "authlib>=1.6.6",
    "pwdlib[argon2]>=0.3.0",
    "langchain-google-genai>=4.2.0",
    "itsdangerous>=2.2.0",
    "langchain>=1.2.6",
    "langchain-anthropic==1.3.4",
    "mcp>=1.26.0",
    "slack-sdk>=3.34.0",
    "aiohttp>=3.13.3",
    "langfuse>=3.14.1",
    "h2>=4.3.0",
    "deepagents>=0.4.4",
    "langchain-ai-sdk-adapter",
]

[dependency-groups]
dev = [
    "ruff>=0.14.4",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.1",
    "pytest-mock>=3.14.0",
]

[tool.ruff]
indent-width = 4
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
    "T201",   # print statements are not allowed
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.uv.sources]
langchain-ai-sdk-adapter = { git = "https://github.com/keurcien/langchain-ai-sdk-adapter.git" }

[tool.ruff.lint.isort]
known-first-party = ["app"]
known-third-party = ["fastapi", "sqlmodel", "psycopg", "redis", "langchain", "langgraph", "langfuse", "langchain-anthropic", "langchain-google-genai", "langchain-mcp-adapters", "langchain-openai", "langchain-deepseek", "langchain-google-genai", "langchain-mcp-adapters", "langchain-openai", "langchain-deepseek", "langchain-google-genai", "langchain-mcp-adapters", "langchain-openai", "langchain-deepseek"]
combine-as-imports = true
force-single-line = false
lines-after-imports = 2
